main
- ValueFastDecimal
- benchmarks for ValueFastDecimal
- cleaned up benchmark configuration